--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,13 +96,13 @@ letter-spacing: 4px;
     font-size: 130%;
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
-    letter-spacing: 4px
+    letter-spacing: 4px;
     
     width: 300px;
     height: 200px;
 
     padding-top: 40px;
-    padding left: 10px;
+    padding-left: 10px;
 
     background-color: rgba(241, 109, 107, .7);
 
@@ -122,18 +122,46 @@ letter-spacing: 4px;
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver;
 }
 
 #center-about {
     width: 33%;
     margin: 0 auto;
     background-color: green;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
 }
